...
    'Korean',
  ];

  // Order status
  static const String orderStatusUnused = 'unused';
  static const String orderStatusUsed = 'used';
  static const String orderStatusRefunded = 'refunded';
  static const String orderStatusRefundRequested = 'refund_requested';
  static const String orderStatusExpired = 'expired';

  // Merchant status
  static const String merchantStatusPending = 'pending';
  static const String merchantStatusApproved = 'approved';
...
